# url-shortener

./: Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yaml
src/: main.rs
templates/: 404.html.tera  shortener.html.tera
